helloworldchart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hw-ingress
  namespace: devopschallenge
  annotations:
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.allow-http: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: baki-world.info
  - http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: example-service
            port:
              number: 3000
